# fibbo-project

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: intergrated.yml
src/: extract_numbers.rs  extract_pr_content.rs  fib_calculator.rs  fib_per_num.rs  main.rs  post_comment.rs
